Fix broken menus when scrollbars are displayed

--- a/pontoon/administration/static/css/admin_project.css
+++ b/pontoon/administration/static/css/admin_project.css
@@ -169,7 +169,7 @@ form a.add-repo {
 
 .locale.select .menu ul li span.code {
   float: right;
-  text-align: right;
+  width: auto;
 }
 
 #id_locales {
